[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "my-course-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0.0a15",
    "langchain-google-genai>=3.0.0a1",
    "langchain-openai>=1.0.0a4",
    "langgraph>=1.0.0a4",
    "langgraph-cli[inmem]>=0.4.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
